# DjangoTGauth

./: README.MD  pyproject.toml
apps/tgauth/common/: apps.py
apps/tgauth/presentation/: views.py
apps/tgauth/templates/: login.html
project/: settings.py  urls.py
