[tool.poetry]
name = "djangotg"
version = "0.1.0"
description = ""
authors = ["defaultftxuser <banginlord@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
python-telegram-bot = "^21.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
